sección sobre mí textos modificados

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Jacqueline Báez Camus</title>
+    <title>Jacqueline Báez</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link" href="#">Acerca de mí</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Trabajos</a>
@@ -68,43 +68,39 @@
     <section id="Acerca-de-mi" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2 class="display-3 fw-bold my-4">Sobre mí</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Actualmente me encuentro realizando un curso de Desarrollo Web y carrera de Diseño UX/UI en Desafío Latam. 
+            
+            Soy Productora Gráfica y Diseñadora de Ambientes, titulada del Instituto profesional Duoc UC.
+
+            En simples palabras, me defino como una persona responsable, detallista,  hábil, puntual, organizada, dinámica y con mucha iniciativa.
+            
+            En el ámbito profesional, me motivo con facilidad al realizar cosas nuevas, lo cual me permite aprender con mayor rapidez. Disfruto del trabajo en equipo y el trabajo individual lo tomo como un gran desafío. 
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <i class="fas fa-highlighter fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Diseño</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    A lo largo de mi vida mis intereses siempre se han orientado al área del diseño, actualmente realizo trabajos freelance orientados a diversas piezas gráficas, tanto análogas como digitales.
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <i class="fas fa-globe fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Web</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Finalizando mis estudios en producción gráfica, noté un gran interés por el área web, específicamente en el área del diseño web. Curando fundamentos de desarrollo web, descubrí lo entretenido del área y lo gratificante de resolver problemas que se presentan.
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
+                <i class="fas fa-tree fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Busco mucha inspiración en todo lo que me rodea, me gusta y disfruto mucho de la naturaleza, los paisajes y la fotografía, considero que es una gran oportunidad para obtener nuevos conceptos e ideas.
                 </p>
             </div>
         </div>
