--- a/index.html
+++ b/index.html
@@ -18,45 +18,41 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" class="img-fluid">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mí</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
 
-                </ul>
-
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark backgr px-4 py-2">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">JACQUELINE BÁEZ</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"> <i class="fas fa-address-book"></i> Sobre mí</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> <i class="fas fa-briefcase"></i> Trabajos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> <i class="fas fa-phone"></i> Contactos</a>
+              </li>
+            </ul>
+          </div>
         </div>
     </nav>
 
-    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
+    <header id="Hero-Section" class="text-light text-end py-5 mt-0">
         <div class="container">
-            <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-5">
-                    Jacqueline <br> Báez
+            <div class="ms-auto col-12 col-md-7 px-4">
+                <h1 class="display-1 fw-bold pt-2">
+                    Jacqueline <br> <span class="yellow">Báez >></span>
                 </h1>
-                <p class="my-5">
-                    "El optimismo firme y paciente siempre rinde sus frutos"
+                <p class="my-5 fs-5">
+                    <span class="yellow"><i class="fas fa-quote-left"></i></span> El optimismo firme y paciente siempre rinde sus frutos <span class="yellow"><i class="fas fa-quote-right"></i></span>
                 </p>
-                <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                <div class="mb-5 pb-2">
+                    <button class="btn btn-lg btn-outline-warning text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-warning text-light">Contáctame</button>
                 </div>
             </div>
         </div>
