nuevo nav implementado en index y estilos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="#"> <i class="fas fa-briefcase"></i> Trabajos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="fas fa-phone"></i> Contactos</a>
+                <a class="nav-link" href="#"> <i class="fas fa-phone"></i> Contacto</a>
               </li>
             </ul>
           </div>
@@ -58,6 +58,12 @@
         </div>
     </header>
 
+    <!-- NAVLINK -->
+    <nav class="nav px-4 backgry justify-content-evenly">
+        <a class="nav active class-nav p-3" aria-current="page" href="#">Software</a>
+        <a class="nav class-nav p-3" href="#">Redes</a>
+        <a class="nav class-nav p-3" href="#">Github</a>
+    </nav>
 
     <section id="Acerca-de-mi" class="container text-center my-5">
 
