colores y diagramación general en index y estilos

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark backgr px-4 py-2">
+    <nav class="navbar navbar-expand-lg navbar-light backgry px-4 py-2">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">JACQUELINE BÁEZ</a>
+          <a class="navbar-brand fw-bold" href="#">JACQUELINE <span class="white">BÁEZ</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,11 +44,11 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-0">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 px-4">
-                <h1 class="display-1 fw-bold pt-2">
-                    Jacqueline <br> <span class="yellow">Báez >></span>
+                <h1 class="display-1 pt-2">
+                    Jacqueline <br> <span class="fw-bold yellow">Báez >></span>
                 </h1>
                 <p class="my-5 fs-5">
-                    <span class="yellow"><i class="fas fa-quote-left"></i></span> El optimismo firme y paciente siempre rinde sus frutos <span class="yellow"><i class="fas fa-quote-right"></i></span>
+                    <span class="yellow"><i class="fas fa-quote-left"></i></span> <span class="fw-italic"></span> El optimismo firme y paciente siempre rinde sus frutos <span class="yellow"><i class="fas fa-quote-right"></i></span>
                 </p>
                 <div class="mb-5 pb-2">
                     <button class="btn btn-lg btn-outline-warning text-light me-4">Trabajos</button>
@@ -59,57 +59,59 @@
     </header>
 
     <!-- NAVLINK -->
-    <nav class="nav px-4 backgry justify-content-evenly">
+    <nav class="nav px-4 backgr justify-content-evenly">
         <a class="nav active class-nav p-3" aria-current="page" href="#">Software</a>
         <a class="nav class-nav p-3" href="#">Redes</a>
         <a class="nav class-nav p-3" href="#">Github</a>
     </nav>
 
-    <section id="Acerca-de-mi" class="container text-center my-5">
+    <!-- ABOUT ME -->
+    <section id="about-me" class="text-center py-5 px-5">
 
-
-        <h2 class="display-3 fw-bold my-4">Sobre mí</h2>
+        <h2 class="display-3 my-4">Sobre <span class="fw-bold yellow">mí >></span></h2>
 
         <p class="my-4">
-            Actualmente me encuentro realizando un curso de Desarrollo Web y carrera de Diseño UX/UI en Desafío Latam. 
-            
-            Soy Productora Gráfica y Diseñadora de Ambientes, titulada del Instituto profesional Duoc UC.
-
-            En simples palabras, me defino como una persona responsable, detallista,  hábil, puntual, organizada, dinámica y con mucha iniciativa.
-            
-            En el ámbito profesional, me motivo con facilidad al realizar cosas nuevas, lo cual me permite aprender con mayor rapidez. Disfruto del trabajo en equipo y el trabajo individual lo tomo como un gran desafío. 
+            Actualmente me encuentro realizando un curso de <span class="fw-bold">Fundamentos de Desarrollo Web y Carrera de Diseño UX/UI</span> en Desafío Latam. 
+            <br>
+            <span class="fw-bold">Soy Productora Gráfica y Diseñadora de Ambientes,</span> titulada del Instituto profesional Duoc UC.
+            <br>
+            En simples palabras, me defino como una persona hábil, <span class="fw-bold">responsable, detallista, organizada, con mucha iniciativa</span>, puntual y dinámica.
+            <br>
+            En el ámbito profesional, <span class="fw-bold">me motivo con facilidad al realizar cosas nuevas,</span> lo cual me permite aprender con mayor rapidez.
+            <br>
+            Disfruto del trabajo en equipo y <span class="fw-bold">el trabajo individual lo tomo como un gran desafío. </span>
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-highlighter fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Diseño</h3>
+                <i class="fas fa-highlighter fa-3x my-3 yellow"></i>
+                <h3 class="my-3 fw-bold yellow">Diseño</h3>
                 <p class="my-3">
-                    A lo largo de mi vida mis intereses siempre se han orientado al área del diseño, actualmente realizo trabajos freelance orientados a diversas piezas gráficas, tanto análogas como digitales.
+                    A lo largo de mi vida mis intereses siempre se han orientado al <span class="fw-bold">área del diseño,</span> actualmente realizo trabajos freelance orientados a diversas <span class="fw-bold">piezas gráficas, tanto análogas como digitales.</span>
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-globe fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Web</h3>
+                <i class="fas fa-globe fa-3x my-3 yellow"></i>
+                <h3 class="my-3 fw-bold yellow">Web</h3>
                 <p class="my-3">
-                    Finalizando mis estudios en producción gráfica, noté un gran interés por el área web, específicamente en el área del diseño web. Curando fundamentos de desarrollo web, descubrí lo entretenido del área y lo gratificante de resolver problemas que se presentan.
+                    Finalizando mis estudios en producción gráfica, noté un gran <span class="fw-bold">interés por el área web,</span> específicamente en el área del diseño web. Cursando fundamentos de desarrollo web, descubrí lo <span class="fw-bold">entretenido del área y lo gratificante de ser resolutiva</span> con problemas que se presentan.
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-tree fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <i class="fas fa-tree fa-3x my-3 yellow"></i>
+                <h3 class="my-3 fw-bold yellow">Naturaleza</h3>
                 <p class="my-3">
-                    Busco mucha inspiración en todo lo que me rodea, me gusta y disfruto mucho de la naturaleza, los paisajes y la fotografía, considero que es una gran oportunidad para obtener nuevos conceptos e ideas.
+                    Busco mucha <span class="fw-bold">inspiración en todo lo que me rodea,</span> me gusta y disfruto mucho de la naturaleza, los paisajes y la fotografía, considero que es una gran <span class="fw-bold">oportunidad para obtener nuevos conceptos e ideas.</span>
                 </p>
             </div>
         </div>
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Mis-trabajos" class="backgry p-5">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 text-center mb-3 grey">Mis <span class="fw-bold">trabajos >></span></h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
@@ -123,12 +125,13 @@
                             repudiandae neque rem adipisci repellendus libero illo quo
                             blanditiis, velit quasi ad, recusandae voluptates officia.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-warning">
                             Ver más
                         </button>
                     </div>
                 </div>
             </div>
+
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
@@ -140,12 +143,13 @@
                             consequatur quos error fuga excepturi quo. Laudantium optio
                             pariatur laboriosam modi, ea molestias?
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-warning">
                             Ver más
                         </button>
                     </div>
                 </div>
             </div>
+
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
@@ -157,7 +161,7 @@
                             corporis facilis qui architecto dolor, accusamus eveniet
                             exercitationem fugit. Quod autem neque ducimus.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-warning">
                             Ver más
                         </button>
                     </div>
@@ -167,11 +171,9 @@
 
     </section>
 
+    <section id="Contacto" class="backgr py-5 px-5">
 
-
-    <section id="Contacto" class="container my-5">
-
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+        <h2 class="display-4 fw-bold text-center yellow my-4">Contáctame >></h2>
 
         <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Doloribus
@@ -180,8 +182,6 @@
             tempora quaerat?</p>
 
         <form>
-
-
             <div class="form-group mb-4">
                 <label class="mb-2">Nombre</label>
                 <input class="form-control" placeholder="Nombre">
@@ -192,28 +192,21 @@
                 <input class="form-control" placeholder="Correo electrónico" />
             </div>
 
-
             <div class="form-group">
                 <label class="mb-2">Mensaje</label>
                 <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
             </div>
 
-            <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
+            <div class="my-3 text-center">
+                <button class="btn btn-warning text-dark fw-bold">Enviar</button>
             </div>
-
-
-
         </form>
 
     </section>
 
-
-
-    <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+    <footer class="backgry text-center p-4 grey fw-bold">
+        <p class="mb-0">Jacqueline Báez 2022. Todos los derechos reservados.</p>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
