color y estructura sección sobre mí y mis trabajos

--- a/index.html
+++ b/index.html
@@ -60,17 +60,18 @@
 
     <!-- NAVLINK -->
     <nav class="nav px-4 backgr justify-content-evenly">
-        <a class="nav active class-nav p-3" aria-current="page" href="#">Software</a>
-        <a class="nav class-nav p-3" href="#">Redes</a>
-        <a class="nav class-nav p-3" href="#">Github</a>
+        <a class="nav active class-nav p-3" aria-current="page" href="#">Sobre mí</a>
+        <a class="nav class-nav p-3" href="#">Mis trabajos</a>
+        <a class="nav class-nav p-3" href="#">Contáctame</a>
     </nav>
+    <section class="backgry p-1 mb-2"></section>
 
     <!-- ABOUT ME -->
-    <section id="about-me" class="text-center py-5 px-5">
+    <section id="about-me" class="text-center py-5 px-5 mx-3">
 
         <h2 class="display-3 my-4">Sobre <span class="fw-bold yellow">mí >></span></h2>
 
-        <p class="my-4">
+        <p class="my-4 pb-4">
             Actualmente me encuentro realizando un curso de <span class="fw-bold">Fundamentos de Desarrollo Web y Carrera de Diseño UX/UI</span> en Desafío Latam. 
             <br>
             <span class="fw-bold">Soy Productora Gráfica y Diseñadora de Ambientes,</span> titulada del Instituto profesional Duoc UC.
@@ -83,39 +84,39 @@
         </p>
 
 
-        <div class="row">
-            <div class="col-12 col-md-4">
+        <div class="row py-4 px-3">
+            <div class="col-12 col-md-4 px-4">
                 <i class="fas fa-highlighter fa-3x my-3 yellow"></i>
                 <h3 class="my-3 fw-bold yellow">Diseño</h3>
                 <p class="my-3">
                     A lo largo de mi vida mis intereses siempre se han orientado al <span class="fw-bold">área del diseño,</span> actualmente realizo trabajos freelance orientados a diversas <span class="fw-bold">piezas gráficas, tanto análogas como digitales.</span>
                 </p>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 px-4">
                 <i class="fas fa-globe fa-3x my-3 yellow"></i>
                 <h3 class="my-3 fw-bold yellow">Web</h3>
                 <p class="my-3">
-                    Finalizando mis estudios en producción gráfica, noté un gran <span class="fw-bold">interés por el área web,</span> específicamente en el área del diseño web. Cursando fundamentos de desarrollo web, descubrí lo <span class="fw-bold">entretenido del área y lo gratificante de ser resolutiva</span> con problemas que se presentan.
+                    Siento un gran <span class="fw-bold">interés por el área web.</span> Estoy cursando fundamentos de desarrollo web, descubrí lo <span class="fw-bold">entretenido del área y lo gratificante de ser resolutiva</span> con problemas que se presentan.
                 </p>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 px-4">
                 <i class="fas fa-tree fa-3x my-3 yellow"></i>
                 <h3 class="my-3 fw-bold yellow">Naturaleza</h3>
                 <p class="my-3">
-                    Busco mucha <span class="fw-bold">inspiración en todo lo que me rodea,</span> me gusta y disfruto mucho de la naturaleza, los paisajes y la fotografía, considero que es una gran <span class="fw-bold">oportunidad para obtener nuevos conceptos e ideas.</span>
+                    Busco <span class="fw-bold">inspiración en todo lo que me rodea,</span> disfruto mucho de la naturaleza, los paisajes y la fotografía, considero que es una gran <span class="fw-bold">oportunidad para obtener nuevos conceptos e ideas.</span>
                 </p>
             </div>
         </div>
     </section>
 
+    <section class="backgry p-2 mb-5 mt-3"></section>
 
-    <section id="Mis-trabajos" class="backgry p-5">
-
-        <h2 class="display-4 text-center mb-3 grey">Mis <span class="fw-bold">trabajos >></span></h2>
+    <section id="Mis-trabajos" class="px-5 pt-4 pb-5">
+        <h2 class="display-4 text-center mb-3 grey">Mis <span class="fw-bold yellow">trabajos >></span></h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
-                <div class="card">
+                <div class="card shadow">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
@@ -133,7 +134,7 @@
             </div>
 
             <div class="col-12 col-sm-4 py-2">
-                <div class="card">
+                <div class="card shadow">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
@@ -151,7 +152,7 @@
             </div>
 
             <div class="col-12 col-sm-4 py-2">
-                <div class="card">
+                <div class="card shadow">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Salmones de Alaska</h5>
@@ -168,8 +169,9 @@
                 </div>
             </div>
         </div>
-
     </section>
+
+    <section class="backgry p-2 mt-5"></section>
 
     <section id="Contacto" class="backgr py-5 px-5">
 
