--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
 
     <!-- NAVLINK -->
     <nav class="nav px-4 backgr justify-content-evenly">
-        <a class="nav active class-nav p-3" aria-current="page" href="#">Sobre mí</a>
-        <a class="nav class-nav p-3" href="#">Mis trabajos</a>
-        <a class="nav class-nav p-3" href="#">Contáctame</a>
+        <a class="nav active class-nav p-3" aria-current="page" href="#scrollspySobremi">Sobre mí</a>
+        <a class="nav class-nav p-3" href="#scrollspyMistrabajos">Mis trabajos</a>
+        <a class="nav class-nav p-3" href="#scrollspyContactame">Contáctame</a>
     </nav>
     <section class="backgry p-1 mb-2"></section>
 
     <!-- ABOUT ME -->
-    <section id="about-me" class="text-center py-5 px-5 mx-3">
+    <section id="about-me" class="text-center px-5 mx-3 pb-5">
 
-        <h2 class="display-3 my-4">Sobre <span class="fw-bold yellow">mí >></span></h2>
+        <h2 id="scrollspySobremi" class="display-3 my-4 pt-5">Sobre <span class="fw-bold yellow">mí >></span></h2>
 
         <p class="my-4 pb-4">
             Actualmente me encuentro realizando un curso de <span class="fw-bold">Fundamentos de Desarrollo Web y Carrera de Diseño UX/UI</span> en Desafío Latam. 
@@ -111,8 +111,8 @@
 
     <section class="backgry p-2 mb-5 mt-3"></section>
 
-    <section id="Mis-trabajos" class="px-5 pt-4 pb-5">
-        <h2 class="display-4 text-center mb-3 grey">Mis <span class="fw-bold yellow">trabajos >></span></h2>
+    <section id="Mis-trabajos" class="px-5 pb-5">
+        <h2 id="scrollspyMistrabajos" class="display-4 text-center mb-3 grey pt-5">Mis <span class="fw-bold yellow">trabajos >></span></h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
@@ -175,7 +175,7 @@
 
     <section id="Contacto" class="backgr py-5 px-5">
 
-        <h2 class="display-4 fw-bold text-center yellow my-4">Contáctame >></h2>
+        <h2 id="scrollspyContactame" class="display-4 fw-bold text-center yellow my-4">Contáctame >></h2>
 
         <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Doloribus
