--- a/index.html
+++ b/index.html
@@ -206,8 +206,9 @@
 
     </section>
 
-    <footer class="backgry text-center p-4 grey fw-bold">
-        <p class="mb-0">Jacqueline Báez 2022. Todos los derechos reservados.</p>
+    <footer class="backgry text-center p-4 grey">
+        <p class="mb-0 pb-3"><i class="far fa-copyright"></i> Jacqueline Báez 2022. Todos los derechos reservados.</p>
+        <div class="grey"><i class="fab fa-html5 fa-2x px-2"></i><i class="fab fa-github fa-2x px-2"></i><i class="fab fa-git fa-2x px-2"></i><i class="fab fa-css3-alt fa-2x px-2"></i></div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
