--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"> <i class="fas fa-address-book"></i> Sobre mí</a>
+                <a class="nav-link active" aria-current="page" href="#"> <i class="fas fa-user-alt"></i> Sobre mí</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"> <i class="fas fa-briefcase"></i> Trabajos</a>
@@ -86,14 +86,14 @@
 
         <div class="row py-4 px-3">
             <div class="col-12 col-md-4 px-4">
-                <i class="fas fa-highlighter fa-3x my-3 yellow"></i>
+                <i class="fas fa-paint-brush fa-3x my-3 yellow"></i>
                 <h3 class="my-3 fw-bold yellow">Diseño</h3>
                 <p class="my-3">
                     A lo largo de mi vida mis intereses siempre se han orientado al <span class="fw-bold">área del diseño,</span> actualmente realizo trabajos freelance orientados a diversas <span class="fw-bold">piezas gráficas, tanto análogas como digitales.</span>
                 </p>
             </div>
             <div class="col-12 col-md-4 px-4">
-                <i class="fas fa-globe fa-3x my-3 yellow"></i>
+                <i class="fas fa-laptop-code fa-3x my-3 yellow"></i>
                 <h3 class="my-3 fw-bold yellow">Web</h3>
                 <p class="my-3">
                     Siento un gran <span class="fw-bold">interés por el área web.</span> Estoy cursando fundamentos de desarrollo web, descubrí lo <span class="fw-bold">entretenido del área y lo gratificante de ser resolutiva</span> con problemas que se presentan.
@@ -208,7 +208,7 @@
 
     <footer class="backgry text-center p-4 grey">
         <p class="mb-0 pb-3"><i class="far fa-copyright"></i> Jacqueline Báez 2022. Todos los derechos reservados.</p>
-        <div class="grey"><i class="fab fa-html5 fa-2x px-2"></i><i class="fab fa-github fa-2x px-2"></i><i class="fab fa-git fa-2x px-2"></i><i class="fab fa-css3-alt fa-2x px-2"></i></div>
+        <div class="grey"><i class="fab fa-html5 fa-2x px-2"></i><i class="fab fa-github fa-2x px-2"></i><i class="fab fa-git fa-2x px-2"></i><i class="fab fa-css3-alt fa-2x px-2"></i><i class="fas fa-terminal fa-2x px-2"></i></div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
