cambio sección naturaleza por manualidades

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                 </p>
             </div>
             <div class="col-12 col-md-4 px-4">
-                <i class="fas fa-tree fa-3x my-3 yellow"></i>
-                <h3 class="my-3 fw-bold yellow">Naturaleza</h3>
+                <i class="far fa-hand-paper fa-3x my-3 yellow"></i>
+                <h3 class="my-3 fw-bold yellow">Manualidades</h3>
                 <p class="my-3">
-                    Busco <span class="fw-bold">inspiración en todo lo que me rodea,</span> disfruto mucho de la naturaleza, los paisajes y la fotografía, considero que es una gran <span class="fw-bold">oportunidad para obtener nuevos conceptos e ideas.</span>
+                    Siempre me ha gustado todo lo relacionado con lo manual, ya que puedo <span class="fw-bold">mezclar el detalle con el perfeccionismo,</span> es una gran oportunidad de <span class="fw-bold">crear a través de nuevos conceptos e ideas.</span>
                 </p>
             </div>
         </div>
