--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </nav>
 
-        <section id="Hero-Section" class="text-light text-end py-5 mt-0">
+        <section class="hero-section text-light text-end py-5 mt-0">
             <div class="container">
                 <div class="ms-auto col-12 col-md-7 px-4">
                     <h1 class="display-1 pt-2">
@@ -58,16 +58,16 @@
                 </div>
             </div>
         </section>
+    </header>
 
+    <main>
         <!-- NAVLINK -->
         <nav class="nav px-4 backgr justify-content-evenly sticky-top">
             <a class="nav active class-nav p-3" aria-current="page" href="#scrollspySobremi">Sobre mí</a>
             <a class="nav class-nav p-3" href="#scrollspyMistrabajos">Mis trabajos</a>
             <a class="nav class-nav p-3" href="#scrollspyContactame">Contáctame</a>
         </nav>
-    </header>
-
-    <main>
+        
         <!-- SOBRE MI -->
         <section id="about-me" class="text-center px-5 mx-3 pb-5">
 
