textos y diagramación mis trabajos

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a class="nav class-nav p-3" href="#scrollspyMistrabajos">Mis trabajos</a>
             <a class="nav class-nav p-3" href="#scrollspyContactame">Contáctame</a>
         </nav>
-        
+
         <!-- SOBRE MI -->
         <section id="about-me" class="text-center px-5 mx-3 pb-5">
 
@@ -113,60 +113,42 @@
         <section class="backgry p-2 mt-3"></section>
 
         <!-- MIS TRABAJOS-->
-        <section id="Mis-trabajos" class="px-5 pb-5">
+        <section class="mis-trabajos px-5">
             <h2 id="scrollspyMistrabajos" class="display-4 text-center mb-5 grey padd-section">Mis <span class="fw-bold yellow">trabajos >></span></h2>
 
             <div class="row">
-                <div class="col-12 col-sm-4 py-2">
+                <div class="col-12 col-sm-4 py-2 pb-5">
                     <div class="card shadow">
-                        <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                        <div class="image-top" style="background-image: url(assets/img/card-proyecto-desafio-latam-01.jpg)"></div>
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
-                            <p class="card-text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Explicabo iure sint, perspiciatis distinctio molestias nihil
-                                repudiandae neque rem adipisci repellendus libero illo quo
-                                blanditiis, velit quasi ad, recusandae voluptates officia.
+                            <h5 class="card-title fw-bold pb-2"><span class="grey">Proyecto </span>Nº1</h5>
+                            <p class="card-text pb-3">
+                                Creación de Proyecto Healthy Food, utilizando CSS, en hojas de estilo externas a html. Landing Page con estructura básica en el cual se utilizaron divs, etiquetas semánticas como header, section y footer.
                             </p>
-                            <button type="button" class="btn btn-outline-warning">
-                                Ver más
-                            </button>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-4 py-2">
+                <div class="col-12 col-sm-4 py-2 pb-5">
                     <div class="card shadow">
-                        <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                        <div class="image-top" style="background-image: url(assets/img/card-proyecto-desafio-latam-02.jpg)"></div>
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
-                            <p class="card-text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                                consequatur quos error fuga excepturi quo. Laudantium optio
-                                pariatur laboriosam modi, ea molestias?
+                            <h5 class="card-title fw-bold pb-2"><span class="grey">Proyecto </span>Nº2</h5>
+                            <p class="card-text pb-3">
+                                Creación de Proyecto Iguana Page, utilizando CSS y estructura de etiquetas semánticas. El enfoque del proyecto se enfocó en utilizar de manera adecuada la propiedad display y modelo de cajas.
                             </p>
-                            <button type="button" class="btn btn-outline-warning">
-                                Ver más
-                            </button>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-4 py-2">
+                <div class="col-12 col-sm-4 py-2 pb-5">
                     <div class="card shadow">
-                        <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                        <div class="image-top" style="background-image: url(assets/img/card-proyecto-desafio-latam-03.jpg)"></div>
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Salmones de Alaska</h5>
-                            <p class="card-text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                                corporis facilis qui architecto dolor, accusamus eveniet
-                                exercitationem fugit. Quod autem neque ducimus.
+                            <h5 class="card-title fw-bold pb-2"><span class="grey">Proyecto </span>Nº3</h5>
+                            <p class="card-text pb-3">
+                                Creación de Proyecto Cuppon, utilizando Bootstrap y CSS. El enfoque de este proyecto consistió en construir un Landing Page de forma responsiva, pudiendo verse en teléfono y computador.
                             </p>
-                            <button type="button" class="btn btn-outline-warning">
-                                Ver más
-                            </button>
                         </div>
                     </div>
                 </div>
