estilo y texto form contacto

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"> <i class="fas fa-user-alt"></i> Sobre mí</a>
+                    <a class="nav-link active" aria-current="page" href="#"> <i class="fas fa-user-alt"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> <i class="fas fa-briefcase"></i> Trabajos</a>
+                    <a class="nav-link" href="#"> <i class="fas fa-briefcase"></i> Servicios</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"> <i class="fas fa-phone"></i> Contacto</a>
@@ -158,14 +158,10 @@
         <section class="backgry p-2 mt-5"></section>
 
         <!-- FORM CONTACTO-->
-        <section id="Contacto" class="backgr pb-5 px-5">
+        <section class="contacto backgr pb-5 px-5">
 
             <h2 id="scrollspyContactame" class="display-4 fw-bold text-center yellow padd-section">Contáctame >></h2>
-            <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Doloribus
-                sapiente, autem delectus totam expedita
-                animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-                tempora quaerat?</p>
+            <p class="text-center my-4 d-none d-md-block">Si te interesa <span class="fw-bold yellow">realizar un proyecto conmigo</span> y conocer los valores de mi servicio, <span class="fw-bold yellow">¡Escríbeme!</span></p>
 
             <form>
                 <div class="form-group mb-4">
