creación servicios.html

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"> <i class="fas fa-user-alt"></i> Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> <i class="fas fa-briefcase"></i> Servicios</a>
+                    <a class="nav-link" href="servicios.html"> <i class="fas fa-briefcase"></i> Servicios</a> 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"> <i class="fas fa-phone"></i> Contacto</a>
